--- a/style.css
+++ b/style.css
@@ -102,3 +102,32 @@ courses style
  .fa-star.filled{
     color: tomato;
  }
+
+ /*----------------------
+  Media quaria
+  ------------------------ */
+  /*-------------------- 
+  mobile device ---------------*/
+  @media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs,.courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
+  }
+  @media only screen and (min-width:688px) and ( max-width:992px){
+    .container{
+        width: 100%;
+    }
+    .players,.courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1,1fr);
+    }
+  }
